--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ span{
         <a href="#about">about</a>
         <a href="#menu">menu</a>
         <a href="#products">products</a>
-        <a href="#review">review</a>
+        <a href="#review">reviews</a>
         <a href="#contact">contact</a>
         <a href="#blogs">blogs</a>
     </nav>
